# MiSTeryNano

./: .gitattributes  .gitignore  .gitmodules  INSTALLATION_LINUX.md  INSTALLATION_WINDOWS.md  Installation_Windows.md  MODES.md  OLD_VERSIONS.md  README.md  SPI.md  TANG_CONSOLE_60K.md  TANG_MEGA_138K.md  TANG_PRIMER_25K.md  TROUBLESHOOTING.md  atarist.gprj  atarist_lcd.gprj  build.tcl  old_versions.md
bl616/: README.md
bl616/misterynano_fw/: CMakeLists.txt  Makefile  SPI.md  cbm.h  debug.h  fatfs_conf_user.h  keycodes.h  main.c  menu.c  menu.h  misterynano_fw_bl616_cfg.ini  osd.h  osd_u8g2.c  proj.conf  sdc.c  sdc.h  sdl_menu_test.c  spi.c  spi.h  sysctrl.c  sysctrl.h  usb.h  usb_config.h  usb_host.c
board/: README.md  misteryshield20k.kicad_pro  misteryshield20k.kicad_sch  tang_nano.kicad_sym
firmware/: README.md
firmware/misterynano_fw/: CMakeLists.txt  Makefile  README.md  a2600.h  amiga.h  atari_st.h  bt_ble.c  bt_ble.h  c64.h  flash_prog_cfg.ini  font_helvR08_te.c  hid.h  hidparser.c  hidparser.h  main.c  menu.c  proj.conf  sdc.c  sdc.h  sdl_menu_test.c  spi.c  spi.h  sysctrl.h  usb_config.h  usb_host.c  vic20.h
impl/: atarist_lcd_process_config.json  atarist_process_config.json  project_process_config.json
mkhdmenu/: README.md  bootloader.py  hddimgreader.py  hddimgwriter.py  mkhdmenu.py
sim/: README.md
src/: README.md  atarist.gprj  atarist_lcd.gprj  atarist_lcd_hdmi.gprj  atarist_tc60k.gprj  atarist_tm138k.gprj  atarist_tp25k.gprj  build.sh  build.tcl  build_lcd.tcl  build_lcd_hdmi.tcl  build_parport.tcl  build_tc60k.tcl  build_tm138k.tcl  (+3 more)
(+658 files in other folders)
